2005-08-22 02:28:37 John Peacock <jpeacock@cpan.org>
	
	Leading whitespace or lack of leading zero caused the the object to be
	initialized incorrectly (reported by Andreas Koenig).
	
	Added POD for subclassing.  Removed cruft from README file.

2005-08-03 09:12:29 John Peacock <jpeacock@cpan.org>
	
	Don't strip trailing zeros unneccesarily

2005-08-02 19:12:24 John Peacock <jpeacock@cpan.org>
	
	Spelling fixes from "Piotr Fusik" <pfusik@op.pl>

2005-07-23 22:29:06 John Peacock <jpeacock@cpan.org>
	
	Complete rename of files to prevent GCC 4.0 bug

2005-07-23 22:22:54 John Peacock <jpeacock@cpan.org>
	
	Preliminary commit for rename of util.[ch]

2005-06-06 05:30:47 John Peacock <jpeacock@cpan.org>
	
	Final changes to release 0.43 to CPAN
	
	*   README, lib/version.pm
	    Bump $VERSION number
	
	*   t/01base.t
	    Test that single term version expands to triplet for $v->normal
	    Eliminate "Exporter" from derived class
	
	*   util/util.c
	    Various const'ifying to match Perl's own changes
	    Handle short and really short array outputs in vnormal()
	
	*   util/util.h
	    const'ify Perl_scan_version()

2005-05-23 07:17:02 John Peacock <jpeacock@cpan.org>
	
	Complete rewrite of parser to handle CPAN-style (two significant decimal) 
	versions, as well as finish documenting the changes.
	
	*   util/util.c
	    Simplify parser to just count digits when parsing numeric versions
	
	*   lib/version.pm
	    Rewrite documentation on Numeric Alpha Versions and make all examples
	    consistent.
	
	*   t/01base.t
	    Add additional tests for CPAN-style alphas as well as object->new()

2005-05-20 16:02:48 John Peacock <jpeacock@cpan.org>
	
	*   lib/version.pm
	    Revised POD to correspond to new behavior with regards to both Quoted
	    Versions and Alpha Versions
	
	*   lib/version.xs
	    Extend new() to be callable as an object method
	    Copy existing object if called as object method with no parameter

2005-05-17 16:59:27 John Peacock <jpeacock@cpan.org>
	