@@ -4,7 +4,7 @@
 
 #########################
 
-use Test::More tests => 195;
+use Test::More tests => 200;
 
 diag "Tests with base class" unless $ENV{PERL_CORE};
 
@@ -19,6 +19,10 @@ use version 0.30;
 @ISA = qw(version);
 $VERSION = 0.01;
 
+package version::Bad;
+use base version;
+sub new { my($self,$n)=@_;  bless \$n, $self }
+
 package main;
 my $testobj = version::Empty->new(1.002_003);
 isa_ok( $testobj, "version::Empty" );
@@ -30,6 +34,22 @@ my $verobj = version->new("1.2.4");
 ok( $verobj > $testobj, "Comparison vs parent class" );
 ok( $verobj gt $testobj, "Comparison vs parent class" );
 BaseTests("version::Empty");
+
+diag "tests with bad subclass" unless $ENV{PERL_CORE};
+$testobj = version::Bad->new(1.002_003);
+isa_ok( $testobj, "version::Bad" );
+eval { my $string = $testobj->numify };
+like($@, qr/Invalid version object/,
+    "Bad subclass numify");
+eval { my $string = $testobj->normal };
+like($@, qr/Invalid version object/,
+    "Bad subclass normal");
+eval { my $string = $testobj->stringify };
+like($@, qr/Invalid version object/,
+    "Bad subclass stringify");
+eval { my $test = $testobj > 1.0 };
+like($@, qr/Invalid version object/,
+    "Bad subclass vcmp");
 
 sub BaseTests {
 
